# ollama-tools

./: .gitignore  2025-08-30-this-session-is-being-continued-from-a-previous-co.txt  README.md  ollama_actors.db  pyproject.toml
commands/: compare-models-reading  ollama  ollama-api  ollama-file-reader  ollama-ps  ollama-run  ollama-run-all  ollama-stop  ollama-stop-all  ollama_file_reader.py  read-with-ollama  summarize-document
docs/: README_FILE_READER.md  README_OLLAMA.md  ollama-docker-vs-standard.md  ollama-emergent-intelligence-guide.md  ollama-gpu-assignments.md  ollama-gpu-preferences-guide.md  ollama-gpu-preferred-assignments.md  ollama-performance-optimization.md  ollama-upgrade-guide.md
scripts/: add-modelfiles-mount.sh  assign-ollama-gpu-preferences.sh  check-mcp-config.sh  list-ollama-models.sh  ollama_container_manager.sh  restore-ollama-containers.sh  sort_ollama_models.sh  upgrade-ollama-containers.sh
sidekick-tools/: NIGHT_SHIFT_REPORT.md  actor_explorer_readme.py  actor_logger.py  architecture_reviewer.py  claude_backchannel.md  code_review_collective.py  compressed_memory_summary.json  embedding_manager.py  epiphany_polisher_readme.py  intelligent_memory_analysis.json  intelligent_memory_search.py  mcp_progressive_search.py  mcp_readme_template.py  memory-search-specialist-server.py  memory-search-specialist.modelfile  memory_compressor.py  memory_search_server.py  network_monitor.py  ollama_readme.py  progressive_search.py  report_merger.py  sample_unified_report.json  security_auditor.py  security_report_20250830_204101.json  sidekick_cli.py  (+12 more)
(+14 files in other folders)
