[project]
name = "ollama-master-mcp"
version = "0.1.0"
description = ""
authors = [
    {name = "Jack C Crawford",email = "jackccrawford@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp (>=1.13.1,<2.0.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
